-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
b08589f4a (dev), eafc56ab6 (6.9)
Reproducible in widgetgraphgallery example. There are both positive and negative bars in the initial view, so user should be able to rotate the camera below the graph, but the rotation stops at 0 level.
This still works in 6.8 branch.
For Gerrit Dashboard: QTBUG-132766 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
617235,3 | Fix bars rotation if we have negative values | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
617671,2 | Fix bars rotation if we have negative values | 6.9 | qt/qtgraphs | Status: MERGED | +2 | 0 |