Fix bars rotation if we have negative values

Pick-to: 6.9
Fixes: QTBUG-132766
Change-Id: I5917e8746d1809e3d9c527f6d8c2061a963a8be6
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Niko Korkala <niko.korkala@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>